Doc fixes and first faq

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,6 +1,12 @@
+GH-PAGES = ${HOME}/dev/urubu-gh-pages/
+
 all: build
+
 build:
 	python -m urubu build
 
 serve:
 	cd _build; python -m urubu serve
+
+publish:
+	rsync -avr --exclude '.*' --delete _build/ ${GH-PAGES}    
