--- a/doc/_site.yml
+++ b/doc/_site.yml
@@ -5,7 +5,7 @@ reflinks:
         url: http://www.jandecaluwe.com
         title: Jan Decaluwe
     myhdl_site: 
-        url: http://new.myhdl.org 
+        url: http://www.myhdl.org 
         title: MyHDL website
     dev_myhdl_site: 
         url: http://dev.myhdl.org 
