Allow running 'serve' from top level

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -6,7 +6,7 @@ build:
 	python -m urubu build
 
 serve:
-	cd _build; python -m urubu serve
+	python -m urubu serve
 
 publish:
 	rsync -avr --exclude '.*' --delete _build/ ${GH-PAGES}    
