--- a/doc/Makefile
+++ b/doc/Makefile
@@ -4,9 +4,10 @@ all: build
 
 build:
 	python -m urubu build
+	touch _build/.nojekyll
 
 serve:
 	python -m urubu serve
 
 publish:
-	rsync -avr --exclude '.*' --delete _build/ ${GH-PAGES}    
+	cd ..; git subtree push --prefix doc/_build origin gh-pages    
