Moved tests within urubu package to ease absolute imports

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,8 @@
 [tox]
 envlist = py27, py34
 [testenv]
-changedir=tests
-deps=pytest
+changedir=urubu/tests
+deps=
+    pytest
+    sh
 commands= py.test --basetemp={envtmpdir} {posargs}
