keep_files: attribute to keep files regarding of ignores

--- a/doc/_site.yml
+++ b/doc/_site.yml
@@ -4,6 +4,8 @@ bootswatch: null
 navbar_inverse: false 
 bootstrap: 3.3.4
 
+keep_files: [ .nojekyll ]
+
 reflinks:
     jandecaluwe:
         url: http://www.jandecaluwe.com
