remove markdown version constraint, reported bug solved

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,6 @@ changedir=urubu/tests
 deps=
     pytest
     sh
-    markdown==2.6.2
+    markdown
     beautifulsoup4
 commands= py.test --basetemp={envtmpdir} {posargs}
