update with python3

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -3,10 +3,10 @@ GH-PAGES = ${HOME}/dev/urubu-gh-pages/
 all: build
 
 build:
-	python -m urubu build
+	python3 -m urubu build
 
 serve:
-	python -m urubu serve
+	python3 -m urubu serve
 
 publish:
 	cd ..; git subtree push --prefix doc/_build origin gh-pages    
