--- a/doc/_site.yml
+++ b/doc/_site.yml
@@ -33,10 +33,10 @@ reflinks:
         url: http://daringfireball.net/projects/markdown/  
         title: Markdown
     markdown_extra:
-        url: http://pythonhosted.org/Markdown/extensions/extra.html
+        url: http://python-markdown.github.io/extensions/extra/
         title: Markdown Extra
     python_markdown:
-        url: http://pythonhosted.org/Markdown/
+        url: http://python-markdown.github.io/
         title: Python-Markdown 
     pygments:
         url: http://pygments.org
@@ -66,25 +66,25 @@ reflinks:
         url: https://github.com/jandecaluwe/urubu
         title: Urubu repo
     tables: 
-        url: http://pythonhosted.org/Markdown/extensions/tables.html
+        url: http://python-markdown.github.io/extensions/tables/
         title: Tables
     abbrev: 
-        url: http://pythonhosted.org/Markdown/extensions/abbreviations.html
+        url: http://python-markdown.github.io/extensions/abbreviations/
         title: Abbrevations
     attr_list:
-        url: http://pythonhosted.org/Markdown/extensions/attr_list.html
+        url: http://python-markdown.github.io/extensions/attr_list/
         title: Attribute lists
     def_list: 
-        url: http://pythonhosted.org/Markdown/extensions/definition_lists.html
+        url: http://python-markdown.github.io/extensions/definition_lists/
         title: Definition Lists
     fenced_code: 
-        url: http://pythonhosted.org/Markdown/extensions/fenced_code_blocks.html
+        url: http://python-markdown.github.io/extensions/fenced_code_blocks/
         title: Fenced Code Blocks
     markdown_checklist: 
         url: https://github.com/FND/markdown-checklist
         title: GitHub style Task Lists
     code_hilite: 
-        url: http://pythonhosted.org/Markdown/extensions/code_hilite.html
+        url: http://python-markdown.github.io/extensions/code_hilite/
         title: CodeHilite
     urubu-quickstart:
         url: http://urubu-quickstart.jandecaluwe.com
