--- a/tox.ini
+++ b/tox.ini
@@ -8,4 +8,6 @@ deps=
     sh
     beautifulsoup4
     pygments
-commands= py.test --basetemp={envtmpdir} {posargs}
+commands= 
+    py.test --basetemp={envtmpdir} {posargs} --ignore=test_doc.py
+    py.test --basetemp={envtmpdir} {posargs} test_doc.py
